overflow fix

--- a/styles/signup.css
+++ b/styles/signup.css
@@ -12,7 +12,6 @@
 }
 body {
     background: #000;
-    overflow-x: hidden;
 }
 /* html,
 body {
@@ -30,6 +29,7 @@ body {
     padding: 1.5rem .5rem;
     font-size: 100%;
     background: #000;
+    overflow: hidden;
 
 }
 .login-register {
